# ml

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
ch1/: ch1-1.ipynb
ch1/.ipynb_checkpoints/: ch1-1-checkpoint.ipynb
ch2/: ch2.ipynb
