[tool.poetry]
name = "hands on machine learning"
version = "0.1.0"
description = "Exercises, tasks and projects provided by 'Hands on Machine Learning with Scikit-Learn, Keras & Tensorflow'"
authors = ["omaist <omaist@local.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
